--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "12-react-redux",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
